tests/fixtures/positive/style/CascadingCallWrapping.kt
package style

fun example() {
    val result = listOf(1, 2, 3).filter { it > 1 }
    .map { it * 2 }
}
